<resources>
    <string name="app_name">App_Trabalho</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="string_txtcadastro">Cadastro</string>
    <string name="txtbotaov">Voltar</string>
    <string name="txtbotaos">Enviar</string>
    <string name="txtModelos">Modelos</string>
    <string name="txtNome">Nome:</string>
    <string name="txtnomehint">Nome do Cliente...</string>
    <string name="txtmodelohint">Modelo...</string>


    <string-array name="marcas">
        <item>Selecione a Marca…</item>
        <item>Yamaha</item>
        <item>Honda</item>
        <item>Kawasaki</item>
        <item>BMW</item>
        <item>Harley Davidson</item>
        <item>Kasinski</item>
        <item>Suzuki</item>
        <item>Ducati</item>
        <item>Triumph</item>
    </string-array>



</resources>