<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/etNome"
        android:layout_width="268dp"
        android:layout_height="45dp"
        android:layout_marginTop="180dp"
        android:drawableBottom="@color/white"
        android:ems="10"
        android:text="@string/txtNome"
        android:hint="@string/txtnomehint"
        android:inputType="textPersonName"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spMarcas"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginTop="72dp"
        android:entries="@array/marcas"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />


    <EditText
        android:id="@+id/etModelos"
        android:layout_width="267dp"
        android:layout_height="38dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:text="@string/txtModelos"
        android:hint="@string/txtmodelohint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMarcas" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtbotaos"
        app:icon="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/Voltar"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtbotaov"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="34dp"
        android:layout_marginTop="52dp"
        android:breakStrategy="high_quality"
        android:text="@string/string_txtcadastro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal|bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintStart_toEndOf="@+id/Voltar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>